fix: don't wrap names in viewer
minor visual tweak; only affects names that can be wrapped (e.g. have characters like `-` in them)

--- a/src/viewer/style.css
+++ b/src/viewer/style.css
@@ -165,6 +165,7 @@ input[type="checkbox"]:checked::before {
 .matchup > .rows > div > div {
     display: table-cell;
     padding-right: 1em;
+    text-wrap: nowrap;
 }
 
 .matchup > .rows .history {
